# 12-factor-agents

./: .env.example  .gitignore  README.md  hello.py  pyproject.toml  run_tests.py
src/: config.py  main.py
src/agents/: __init__.py  base.py  deployment_agent.py  llm_providers.py
src/api/: __init__.py  main.py
src/context/: __init__.py
src/errors/: __init__.py
src/human/: __init__.py
src/prompts/: __init__.py  manager.py
src/prompts/templates/: base_agent.jinja  customer_support.jinja  deployment_agent.jinja
src/state/: __init__.py
src/tools/: __init__.py  builtin_tools.py  registry.py  schemas.py
tests/: README.md  __init__.py  conftest.py
tests/e2e/: __init__.py  test_agent_workflows.py
tests/integration/: __init__.py  test_api_endpoints.py
tests/mocks/: __init__.py  external_services.py  llm_providers.py
tests/performance/: test_load_testing.py
tests/security/: __init__.py  test_vulnerabilities.py
tests/unit/: test_base_agent.py  test_builtin_tools.py  test_llm_providers.py  test_tool_registry.py
